pkg/config/analysis/analyzers/testdata/injection.yaml
# Broken config in a yaml config file
#

# Namespace is explicitly enabled
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: default
---
# Namespace is explicitly disabled, Should not generate warning!
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: disabled
  name: foo
---
# Namespace doesn't have the label at all
apiVersion: v1
kind: Namespace
metadata:
  name: bar
---
# Namespace is explicitly enabled in the new style
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: canary
  name: canary-test
---
# Namespace is explicitly enabled in the new style, but refers to a non-existent control plane
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: pidgeon
  name: pidgeon-test
---
# Namespace has both old and new labels
apiVersion: v1
kind: Namespace
metadata:
  name: busted
  labels:
    istio-injection: enabled
    istio.io/rev: canary
---
# Pod that's injected. No warning
apiVersion: v1
kind: Pod
metadata:
  name: injectedpod
  namespace: default
spec:
  containers:
  - image: gcr.io/google-samples/microservices-demo/adservice:v0.1.1
    name: server
  - image: docker.io/istio/proxyv2:1.3.0-rc.2
    name: istio-proxy
---
# Pod that's not injected and should be. Should generate warning
apiVersion: v1
kind: Pod
metadata:
  name: noninjectedpod
  namespace: default
spec:
  containers:
  - image: gcr.io/google-samples/microservices-demo/adservice:v0.1.1
    name: server
---
# Pod that explicitly disables injection. Should not generate a warning.
apiVersion: v1
kind: Pod
metadata:
  name: podinjectiondisabled
  namespace: default
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
  - image: gcr.io/google-samples/microservices-demo/adservice:v0.1.1
    name: server
---
# Control plane pod proving the existence of istio.io/rev 'canary'
apiVersion: v1
kind: Pod
metadata:
  name: istiod-canary-1234567890-12345
  namespace: dubbo-system
  labels:
    app: istiod
    istio: pilot
    istio.io/rev: canary
spec:
  containers:
  - image: gcr.io/google-samples/microservices-demo/adservice:v0.1.1
    name: server
